--- a/static/assets/css/_main.scss
+++ b/static/assets/css/_main.scss
@@ -246,6 +246,9 @@ transform: translate(-50%,-50%);
 
   img{
     height: 400px; 
+    @include bp(md){
+      height:auto;
+    }
   }
   .row{
     max-width: auto;
