--- a/static/assets/css/page/contact.css
+++ b/static/assets/css/page/contact.css
@@ -503,6 +503,12 @@ hr {
   height: 400px;
 }
 
+@media (max-width: 1250px) {
+  .textimgComp img {
+    height: auto;
+  }
+}
+
 .textimgComp .row {
   max-width: auto;
   margin: 0 auto;
@@ -1239,6 +1245,12 @@ hr {
 
 .textimgComp img {
   height: 400px;
+}
+
+@media (max-width: 1250px) {
+  .textimgComp img {
+    height: auto;
+  }
 }
 
 .textimgComp .row {
