--- a/static/assets/css/index.scss
+++ b/static/assets/css/index.scss
@@ -32,7 +32,7 @@
         }
       .p20{
           font-family: 'Chap';
-   @include padding(20px,0,0,0)
+   @include padding(20px,0,20px,0)
    
    
       }
