--- a/static/assets/css/page/contact.css
+++ b/static/assets/css/page/contact.css
@@ -486,7 +486,7 @@ hr {
 .textimgComp .btn-primary {
   margin-top: 32px;
   margin-right: 0;
-  margin-bottom: 0;
+  margin-bottom: 32px;
   margin-left: 0;
 }
 
@@ -494,7 +494,7 @@ hr {
   .textimgComp .btn-primary {
     margin-top: 16px;
     margin-right: 0;
-    margin-bottom: 0;
+    margin-bottom: 16px;
     margin-left: 0;
   }
 }
@@ -1230,7 +1230,7 @@ hr {
 .textimgComp .btn-primary {
   margin-top: 32px;
   margin-right: 0;
-  margin-bottom: 0;
+  margin-bottom: 32px;
   margin-left: 0;
 }
 
@@ -1238,7 +1238,7 @@ hr {
   .textimgComp .btn-primary {
     margin-top: 16px;
     margin-right: 0;
-    margin-bottom: 0;
+    margin-bottom: 16px;
     margin-left: 0;
   }
 }
