--- a/static/assets/css/_main.scss
+++ b/static/assets/css/_main.scss
@@ -241,7 +241,7 @@ transform: translate(-50%,-50%);
   }
   .btn-primary{
     @extend .btn-primary;
-    @include margin(32px,0,0,0)
+    @include margin(32px,0,32px,0)
   }
 
   img{
