--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -484,7 +484,7 @@ hr {
 .textimgComp .btn-primary {
   margin-top: 32px;
   margin-right: 0;
-  margin-bottom: 0;
+  margin-bottom: 32px;
   margin-left: 0;
 }
 
@@ -492,7 +492,7 @@ hr {
   .textimgComp .btn-primary {
     margin-top: 16px;
     margin-right: 0;
-    margin-bottom: 0;
+    margin-bottom: 16px;
     margin-left: 0;
   }
 }
@@ -896,7 +896,7 @@ hr {
   font-family: 'Chap';
   padding-top: 20px;
   padding-right: 0;
-  padding-bottom: 0;
+  padding-bottom: 20px;
   padding-left: 0;
 }
 
@@ -904,7 +904,7 @@ hr {
   .ourbrands .row .p20 {
     padding-top: 10px;
     padding-right: 0;
-    padding-bottom: 0;
+    padding-bottom: 10px;
     padding-left: 0;
   }
 }
