--- a/static/assets/css/page/blog.css
+++ b/static/assets/css/page/blog.css
@@ -96,43 +96,43 @@ img {
   height: auto;
 }
 
-p, .p18, .p18h, .textimgComp .p18, .p20, .p32, .p36, .p24, select {
+.p18, .p18h, h2, .textimgComp .p18, h4, .p20, h5, .p32, .p36, h3, .p24, p, select {
   font-family: 'maison_neuelight';
   color: #5A6634;
   margin: 0;
   line-height: 125%;
 }
 
-.p18, .p18h, .textimgComp .p18 {
+.p18, .p18h, h2, .textimgComp .p18, h4 {
   font-family: "maison_neuelight";
   letter-spacing: 0.05em;
   font-size: 18px !important;
 }
 
 @media (max-width: 1250px) {
-  .p18, .p18h, .textimgComp .p18 {
+  .p18, .p18h, h2, .textimgComp .p18, h4 {
     font-size: 9px;
   }
 }
 
-.p18h {
+.p18h, h2 {
   padding-bottom: 32px;
 }
 
 @media (max-width: 1250px) {
-  .p18h {
+  .p18h, h2 {
     padding-bottom: 16px;
   }
 }
 
-.p20 {
+.p20, h5 {
   font-size: 20px;
   line-height: 26px;
   padding-bottom: 32px;
 }
 
 @media (max-width: 1250px) {
-  .p20 {
+  .p20, h5 {
     font-size: 10px;
     line-height: 8px;
   }
@@ -151,27 +151,27 @@ p, .p18, .p18h, .textimgComp .p18, .p20, .p32, .p36, .p24, select {
   }
 }
 
-.p36 {
+.p36, h3 {
   font-family: "Chap";
   line-height: 47px;
   font-size: 36px;
 }
 
 @media (max-width: 1250px) {
-  .p36 {
+  .p36, h3 {
     font-size: 18px;
     line-height: 28px;
   }
 }
 
-.p24 {
+.p24, p {
   font-family: "maison_neuelight";
   line-height: 30px;
   font-size: 24px;
 }
 
 @media (max-width: 1250px) {
-  .p24 {
+  .p24, p {
     font-size: 12px;
     line-height: 15px;
   }
@@ -230,13 +230,13 @@ a:hover {
   }
 }
 
-#footer p, #footer .p18, #footer .p18h, #footer .p20, #footer .p32, #footer .p36, #footer .p24, #footer select {
+#footer .p18, #footer .p18h, #footer h2, #footer h4, #footer .p20, #footer h5, #footer .p32, #footer .p36, #footer h3, #footer .p24, #footer p, #footer select {
   color: white;
   margin: 0;
   line-height: 125%;
 }
 
-#footer p:nth-last-child(odd), #footer .p18:nth-last-child(odd), #footer .p18h:nth-last-child(odd), #footer .p20:nth-last-child(odd), #footer .p32:nth-last-child(odd), #footer .p36:nth-last-child(odd), #footer .p24:nth-last-child(odd), #footer select:nth-last-child(odd) {
+#footer .p18:nth-last-child(odd), #footer .p18h:nth-last-child(odd), #footer h2:nth-last-child(odd), #footer h4:nth-last-child(odd), #footer .p20:nth-last-child(odd), #footer h5:nth-last-child(odd), #footer .p32:nth-last-child(odd), #footer .p36:nth-last-child(odd), #footer h3:nth-last-child(odd), #footer .p24:nth-last-child(odd), #footer p:nth-last-child(odd), #footer select:nth-last-child(odd) {
   color: rgba(255, 255, 255, 0.5);
 }
 
@@ -470,7 +470,7 @@ a:hover {
   }
 }
 
-.textimgComp .p18h, .textimgComp .p18 {
+.textimgComp .p18h, .textimgComp h2, .textimgComp .p18, .textimgComp h4 {
   padding-top: 0;
   padding-right: 0;
   padding-bottom: 32px;
@@ -478,7 +478,7 @@ a:hover {
 }
 
 @media (max-width: 1250px) {
-  .textimgComp .p18h, .textimgComp .p18 {
+  .textimgComp .p18h, .textimgComp h2, .textimgComp .p18, .textimgComp h4 {
     padding-top: 0;
     padding-right: 0;
     padding-bottom: 16px;
@@ -584,7 +584,7 @@ a:hover {
   }
 }
 
-.clients .p18, .clients .p18h {
+.clients .p18, .clients .p18h, .clients h2, .clients h4 {
   margin-top: 0;
   margin-right: 0;
   margin-bottom: 32px;
@@ -592,7 +592,7 @@ a:hover {
 }
 
 @media (max-width: 1250px) {
-  .clients .p18, .clients .p18h {
+  .clients .p18, .clients .p18h, .clients h2, .clients h4 {
     margin-top: 0;
     margin-right: 0;
     margin-bottom: 16px;
@@ -749,107 +749,32 @@ a:hover {
   max-width: 1220px;
 }
 
-#clients .box {
-  background-color: #f3f8fc;
-}
-
-#clients .box img {
-  padding-top: 175px;
-  padding-right: 181px;
-  padding-bottom: 175px;
-  padding-left: 181px;
+h1 {
+  font-size: "Chap";
+  font-family: 72px;
+  line-height: 100%;
 }
 
 @media (max-width: 1250px) {
-  #clients .box img {
-    padding-top: 87.5px;
-    padding-right: 90.5px;
-    padding-bottom: 87.5px;
-    padding-left: 90.5px;
+  h1 {
+    font-size: "Chap"/2;
+    line-height: 50%;
   }
 }
 
-#clients .col-md-6:first-child {
-  padding-top: 0;
-  padding-right: 20px;
-  padding-bottom: 0;
+.nuxt-content h2:not(:first-of-type) {
+  padding-top: 16px;
+  padding-right: 0;
+  padding-bottom: 32px;
   padding-left: 0;
 }
 
 @media (max-width: 1250px) {
-  #clients .col-md-6:first-child {
-    padding-top: 0;
-    padding-right: 10px;
-    padding-bottom: 0;
+  .nuxt-content h2:not(:first-of-type) {
+    padding-top: 8px;
+    padding-right: 0;
+    padding-bottom: 16px;
     padding-left: 0;
   }
 }
-
-@media (max-width: 1250px) {
-  #clients .col-md-6:first-child {
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 20px;
-    padding-left: 0;
-  }
-}
-
-@media (max-width: 1250px) and (max-width: 1250px) {
-  #clients .col-md-6:first-child {
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 10px;
-    padding-left: 0;
-  }
-}
-
-#clients .col-md-6:last-child {
-  padding-top: 0;
-  padding-right: 0;
-  padding-bottom: 0;
-  padding-left: 20px;
-}
-
-@media (max-width: 1250px) {
-  #clients .col-md-6:last-child {
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 10px;
-  }
-}
-
-@media (max-width: 1250px) {
-  #clients .col-md-6:last-child {
-    padding-top: 20px;
-    padding-right: 0;
-    padding-bottom: 0px;
-    padding-left: 0;
-  }
-}
-
-@media (max-width: 1250px) and (max-width: 1250px) {
-  #clients .col-md-6:last-child {
-    padding-top: 10px;
-    padding-right: 0;
-    padding-bottom: 0px;
-    padding-left: 0;
-  }
-}
-
-#clients > div:not(:nth-child(2)):not(:nth-child(5)) {
-  padding-top: 40px;
-  padding-right: 0;
-  padding-bottom: 40px;
-  padding-left: 0;
-}
-
-@media (max-width: 1250px) {
-  #clients > div:not(:nth-child(2)):not(:nth-child(5)) {
-    padding-top: 20px;
-    padding-right: 0;
-    padding-bottom: 20px;
-    padding-left: 0;
-  }
-}
-/*# sourceMappingURL=clients.css.map */
+/*# sourceMappingURL=blog.css.map */
