--- a/static/assets/css/_main.scss
+++ b/static/assets/css/_main.scss
@@ -5,7 +5,9 @@ $sec-font:'Chap';
 $bp:800px;
 @import 'mixin.scss' ;
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css);
+@import url(https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css);
 @import url('/assets/fonts/stylesheet.css');
+body{margin:0px}
 .col-md-6,.row,.col-md-4,.col-md-8,{
   @include pad(0px);
 }
@@ -31,6 +33,9 @@ $bp:800px;
     }
     .nav-link{
       font-size: 18px;
+      font-family: $pri-font;
+      line-height: 21.09px;
+    
       @include bp(lg)
       {padding: 0 12px;}
       @include bp(md)
@@ -64,9 +69,9 @@ img{
 @extend p;
 font-family:$pri-font;
 letter-spacing: 0.05em;
-font-size: 18px !important;
+font-size: 18px;
 @include bp(md){
-  font-size: 9px;
+  font-size: 12px;
 }
 }
 
@@ -172,10 +177,11 @@ a{&:hover{color:$pri-color}}
     padding: 7.5px 32px 7.5px 32px;
     text-align: center;
     font-size: 18px;
+    font-family: $pri-font;
     width: fit-content;
     border-color: transparent;
     @include bp(md){
-      font-size: 0.5em;
+      font-size: 0.8em;
       padding: 3.5px 16px 3.5px 16px;
     }
     text-decoration: none;
@@ -310,10 +316,17 @@ flex-grow: 1;
   @include margin(80px,80px,80px,80px);
   padding: 0px;
   .modal-info{
+    @include bp(md){
+     & :nth-child(2){margin-top: 10px;}
+    }
     @include padding(0,0,0,40px);
     @include bp(md){@include padding(40px,0,0,0px);}
     .name{@include p(36px,$sec-font,125%)}
-    .job-title,.contact,.email,.bio{@include p(18px,$pri-font,125%)}
+    .job-title,.contact,.email,.bio{
+      @include p(18px,$pri-font,125%);
+      @include bp(md){@include p(18px,$pri-font,inherit);
+      }
+    }
     .bio,.contact{@include padding(32px,0,0,0);}
     .email{@include padding(8px,0,0,0);}
   }
@@ -322,3 +335,12 @@ flex-grow: 1;
   max-width: 1220px;
 }
 ///bootstrap-elements-config
+
+//svgs
+.download{
+  background-image: url(/assets/img/download.svg);
+  display: inline;
+  @include bp(md){
+    height: 1em;
+  }
+}
