--- a/static/assets/css/index.scss
+++ b/static/assets/css/index.scss
@@ -22,6 +22,9 @@
         @include margin(27px,0,38px,0);   
     }
     .row{
+        .col-md-3{
+            @include bp(md){text-align: center;}
+        }
         &:not(:nth-of-type(1)){
         @include margin(80px,0,80px,0)
         @include bp(md){@include margin(80px/2,0,80px/2,0)}
